[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "Exploration of a Semantic Workbench assistant integration with LangGraph."
authors = ["Semantic Workbench Team"]
readme = "README.md"
packages = [{ include = "assistant" }]

[tool.poetry.dependencies]
python = "~3.11"
aiohttp = "^3.10.5"
azure-identity = "^1.17.1"
azure-ai-contentsafety = "^1.0.0"
deepmerge = "^2.0"
docx2txt = "^0.8"
html2docx = "^1.6.0"
markdown = "^3.6"
openai = "^1.3.9"
pdfplumber = "^0.11.2"
tiktoken = "^0.7.0"
# typing
# pydantic = "^2.8.2"
arxiv = "^2.1.3"
langchain-core = "^0.3.1"
langgraph = "^0.2.22"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
# functools
# operator

# If you copy this file to your project, you should verify the relative path to the following:
semantic-workbench-assistant = { path = "../../semantic-workbench/v1/service/semantic-workbench-assistant", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["venv", ".venv"]
